# BotMailNotice

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish_teenstudy.yml
nonebot_plugin_BotMailNotice/: __init__.py
